Avoid CSS classes composition to increase readability and searchability

--- a/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
@@ -1,11 +1,5 @@
-$gallery: ".wc-block-product-gallery";
-$large-image: "#{$gallery}-large-image";
-$thumbnails: "#{$gallery}-thumbnails";
-$next-previous: "#{$large-image}-next-previous";
-$next-previous-left-off: "#{$next-previous}-left--off";
-$next-previous-right-off: "#{$next-previous}-right--off";
-$gallery-next-previous-outside-image: "#{$gallery}[data-next-previous-buttons-position='outsideTheImage']:not(.is-single-product-gallery-image)";
-$gallery-next-previous-inside-image: "#{$gallery}:not([data-next-previous-buttons-position='outsideTheImage']:not(.is-single-product-gallery-image))";
+$gallery-next-previous-outside-image: ".wc-block-product-gallery[data-next-previous-buttons-position='outsideTheImage']:not(.is-single-product-gallery-image)";
+$gallery-next-previous-inside-image: ".wc-block-product-gallery:not([data-next-previous-buttons-position='outsideTheImage']:not(.is-single-product-gallery-image))";
 
 $outside-image-offset: 30px;
 $outside-image-max-width: calc(100% - (2 * $outside-image-offset));
@@ -34,7 +28,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 }
 
 // Product Gallery
-#{$gallery} {
+.wc-block-product-gallery {
 	dialog {
 		flex-direction: column;
 		position: fixed;
@@ -70,7 +64,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 			}
 		}
 
-		#{$large-image} {
+		.wc-block-product-gallery-large-image {
 			img {
 				max-height: $full-height-desktop;
 				width: auto;
@@ -91,7 +85,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 			}
 		}
 
-		#{$next-previous} {
+		.wc-block-product-gallery-large-image-next-previous {
 			height: $full-height-desktop;
 			@include full-height-admin();
 		}
@@ -99,7 +93,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 }
 
 // Large Image
-#{$large-image} {
+.wc-block-product-gallery-large-image {
 	width: 100%;
 	height: fit-content;
 	position: relative;
@@ -188,7 +182,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 }
 
 // Next/Previous Buttons
-#{$next-previous} {
+.wc-block-product-gallery-large-image-next-previous {
 	display: flex;
 	position: absolute;
 	flex-direction: row;
@@ -224,8 +218,8 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 }
 
 // Next/Previous Buttons Off Setting
-#{$next-previous-left-off},
-#{$next-previous-right-off} {
+.wc-block-product-gallery-large-image-next-previous-left--off,
+.wc-block-product-gallery-large-image-next-previous-right--off {
 	display: none;
 }
 
@@ -251,7 +245,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 	position: absolute;
 }
 
-#{$gallery-next-previous-outside-image} #{$large-image} #{$next-previous} {
+#{$gallery-next-previous-outside-image} .wc-block-product-gallery-large-image .wc-block-product-gallery-large-image-next-previous {
 	margin-right: 0;
 	margin-left: 0;
 }
@@ -302,7 +296,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 }
 
 // Thumbnails
-#{$thumbnails} {
+.wc-block-product-gallery-thumbnails {
 	display: flex;
 
 	img {
@@ -312,12 +306,12 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 		max-width: 100%;
 	}
 
-	#{$gallery}[data-thumbnails-position='bottom'] & {
+	.wc-block-product-gallery[data-thumbnails-position='bottom'] & {
 		flex-direction: row;
 		gap: 0 15px;
 	}
 
-	#{$gallery}:not([data-thumbnails-position='bottom']) & {
+	.wc-block-product-gallery:not([data-thumbnails-position='bottom']) & {
 		flex-direction: column;
 		gap: 15px 0;
 
@@ -332,7 +326,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 	}
 
 	@for $i from 3 through 8 {
-		#{$gallery}[data-thumbnails-number-of-thumbnails='#{$i}']:not([data-thumbnails-position='bottom']) & {
+		.wc-block-product-gallery[data-thumbnails-number-of-thumbnails='#{$i}']:not([data-thumbnails-position='bottom']) & {
 			// Calculate the total width occupied by the gaps between thumbnails.
 			$gap-width: $thumbnails-gap * ($i - 1);
 
